--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom scrollbar styles */
+@import './components/cpe/utils/scroll.css';
+
 
 body {
   margin: 0 !important;
